button edit mobile

--- a/JQuery/css/styles.css
+++ b/JQuery/css/styles.css
@@ -78,6 +78,10 @@ p {
 	li {
         list-style: none;
     }
+
+    ul {
+        display: none;
+    }
     
     button {
         background-color: #1D2E3B;
