validation attempt 1 cats.org

--- a/jQuery2/css/styles.css
+++ b/jQuery2/css/styles.css
@@ -58,8 +58,8 @@ h3 {
 
 footer {
     padding: 12%;
-    margin-top: 180%;
-    text-align: left;
+    margin-top: 50%;
+    text-align: center;
     color:  #9fcef2;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
