--- a/jQuery3/jquery-ui-1.13.2.billy-mac/jquery-ui.css
+++ b/jQuery3/jquery-ui-1.13.2.billy-mac/jquery-ui.css
@@ -941,7 +941,7 @@ a.ui-button,
 a:link.ui-button,
 a:visited.ui-button,
 .ui-button {
-	color: #ffffff;
+	color: #DD4011 ;
 	text-decoration: none;
 }
 .ui-state-hover,
